# Course-plus-app

./: .gitignore  ASSET_HOSTING_PLAN.md  BUILD.md  DESKTOP.md  EMAIL_FORWARDING.md  MCP_PLAN.md  MEETING_SERIES_SPEC.md  OPENCLAW_AGENDA_PATCH.md  PROJECT_SURFACE_REBUILD.md  README.md  SERIES_STATUS.md  index.html  manifest.webmanifest  mcp-login.html  package-lock.json  package.json  sw.js  vite.config.js
.claude/: launch.json
assets/: MdEditorInner-CeLM_Plh.js  MdEditorInner-Ds4Fmqf-.js  MdEditorInner-y2HdWhzF.js  esm--_LdYK5V.js  esm-2-dUM1DM.js  esm-5ASl1akl.js  esm-B5schkBr.js  esm-B8gFjD-e.js  esm-B8zn5FCH.js  esm-BFGEyWEq.js  esm-BHMT2XtJ.js  esm-BHZxutRk.js  esm-BICe2tIq.js  esm-BMpgbtLn.js  esm-BTxF-HtT.js  esm-BVVuEuyp.js  esm-BXj_bNuI.js  esm-Bh8PyIhA.js  esm-BkUiTIpD.js  esm-BnsmPcM7.js  esm-BplIjz22.js  esm-BrC6A4RZ.css  esm-BruL46cg.js  esm-C7eLHADD.js  esm-C88npcMx.js  esm-CDvf5sBD.js  esm-CMlloyga.js  esm-CQEJGja5.js  esm-CT2WyZlc.js  esm-CWN2vMld.js  esm-CXVOHm1A.js  esm-CdpAYlqC.js  esm-Ce8cAzRl.js  esm-CfJCWGC6.js  esm-Cg9szAcs.js  esm-Ckvnlp0t.js  esm-CnJHhKJB.js  esm-CqnbC-VK.js  esm-CtWTdHrY.js  esm-CwPI5UoK.js  (+198 more)
mcp/: README.md  login.mjs  package-lock.json  package.json  server.js
public/: sw.js
scripts/: deploy-ghpages.sh  gmail-login.mjs  import_from_course.sql
src/: App.jsx  DataContext.jsx  ErrorBoundary.jsx  RecorderContext.jsx  ctx.jsx  data.js  kit.jsx  main.jsx  (+1 more)
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/shell/: index.html
src-tauri/src/: lib.rs  main.rs
(+58 files in other folders)
